2008-10-07  Sven Herzberg  <sven@imendio.com>

	Added a DhLink field to the DhAssistantView

	* src/dh-assistant-view.c,
	* src/dh-assistant-view.h: added getter and setter for the link
	* src/dh-link.h: added DH_IS_LINK

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Connect to the key-press-event of the DhAssistant, not the
	WebKitWebView

	* src/dh-assistant.c: connect to a different widget (no need to
	connect this one on the WebKitWebView)

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Moved assistant_button_press_event_cb into DhAssistantView

	* src/dh-assistant-view.c: added assistant_button_press_event_cb
	* src/dh-assistant.c: dropped assistant_button_press_event_cb

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Moved assistant_navigation_requested_cb into the DhAssistantView

	* src/dh-assistant-view.c: added assistant_navigation_requested_cb
	* src/dh-assistant.c: dropped assistant_navigation_requested_cb

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Use the DhAssistantView's DhBase

	* src/dh-assistant.c: drop the own DhBase reference; use the one from
	the DhAssistantView

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Added a getter for the DhBase

	* src/dh-assistant-view.c,
	* src/dh-assistant-view.h: added a getter, so we can get rid of the
	DhBase in DhAssistant

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Added a DhBase field to the DhAssistantView

	* src/dh-assistant-view.c,
	* src/dh-assistant-view.h: added the field to the view (for the code
	moving)
	* src/dh-assistant.c: set the base of the DhAssistantView

2008-10-07  Sven Herzberg  <sven@imendio.com>

	Implemented the DhAssistantView type (with blind type prototypes)

	* src/dh-assistant-view.c,
	* src/dh-assistant-view.h: implement DhAssistantView; put the struct
	definitions into the .c file so we don't have to include webkit in the
	header
	* src/dh-assistant.c: use the new DhAssistantView instead of a plain
	WebKitWebView

2008-10-07  Sven Herzberg  <sven@imendio.com>
